[fix] Better alignement of links in footer

--- a/memopol2/static/css/main.css
+++ b/memopol2/static/css/main.css
@@ -89,7 +89,6 @@ li ul li {
 }
 
 #footer a { 
-    vertical-align: middle;
     color: #ffffff;
     text-decoration: underline;
 }
